[tool.poetry]
name = "autoreplit"
version = "0.1.0"
description = ""
authors = ["Ahmed"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
playwright = "^1.36.0"
rich = "^13.5.2"
click = "^8.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
